# ct_research

./: .gitignore  00_pull_data.py  01_preprocess_data.py  02_encode_data.py  03_train_predictor.py  04_aggregate_average.py  05_simulate_trajectory.py  CHANGELOG.md  action_query.sql  autoencoder copy.ipynb  autoencoder.ipynb  autoencoder_fake_data.ipynb  autoencoder_pytorch.ipynb  baseline_quant.ipynb  builder.py  changelog.md  combined_query.sql  connection.py  context.ipynb  context_action.ipynb  context_query.sql  data.csv  debug.ipynb  deficit_action.sql  disorder_action.sql  environment.yml  filter.ipynb  gpr.ipynb  gradient_skipping.ipynb  helper.py  imputation.ipynb  masking.ipynb  next_step.py  next_step_prediction.ipynb  one_domain_next_step.ipynb  outcome.ipynb  pbcopy  pipeline.ipynb  pipeline_debug.ipynb  prediction.ipynb  (+10 more)
archive/: context.ipynb  context_action.ipynb  dropout.ipynb  filter.ipynb  outcome.ipynb
notebooks/: 00_data_pull_visuals.ipynb  06_esp_pipeline.ipynb  07_test_new_data_preprocessing.ipynb  07_test_scripts.ipynb
queries/: progression.sql
reference/: project_Constant_Therapy_ESP_Toy_Project_experiment_run_for_notebook_and_others_run_4522_notebook.ipynb
sandbox/: git_commit_hash.txt  play_with_logger.py
scripts/: 00_pull_data.py  03_train_predictor.py  build_dataset.py  pull_raw.py
sql/: predictor_data_query_20250529.sql  test_query.sql  valid_users_20251117.sql
v1/: README.md  baseline_quant.ipynb  debug.ipynb  filter.ipynb  next_step_prediction.ipynb  pipeline copy.ipynb  pipeline_debug copy.ipynb  pipeline_debug.ipynb  (+6 more)
(+450 files in other folders)
