[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct"
version = "1.1.0"
requires-python = ">=3.12"
dependencies = ["torch",
                "numpy",
                "pandas"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]